# grpc_server_rust

./: .gitignore  Cargo.toml
.github/workflows/: build.yml
proto/: BufferMonitor.proto  Device.proto  Ifmgr.proto  Ifmon.proto  Syslog.proto  Syslog_v3.proto  arp_v3.proto  bfd_tree.proto  dev_v3.proto  diag_tree.proto  diag_v3.proto  dial_out.proto  gnmi.proto  grpc_dialout.proto  grpc_dialout_v3.proto  grpc_service.proto  hq_v3.proto  if_bufmon_v3.proto  if_tcb_v3.proto  ifit_v3.proto  ifmgr_v3.proto  ifmon_v3.proto  igmp_tree.proto  insuitoam_v3.proto  ipfw_tree.proto  l2vpn_v3.proto  mld_tree.proto  nd_v3.proto  nqa_v3.proto  nqas_v3.proto  ntp_v3.proto  oc_chip_tree_v3.proto  oc_interfaces_v3.proto  oc_ipv4_v3.proto  oc_ipv6_v3.proto  oc_lagg_v3.proto  oc_logging_v3.proto  oc_platform_tree_v3.proto  oc_routed_vlan_v3.proto  oc_switched_vlan_v3.proto  (+8 more)
src/: index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: chunk.rs  config.rs  error.rs  gui.rs  logging_setup.rs  main.rs  models.rs  proto_dynamic.rs  server.rs  udp_header.rs
src-tauri/src/dialout/: gnmi.rs  gpb_v3.rs  mod.rs  normal.rs  udp.rs
tls/: client.crt  client.csr  client.key  client.pfx  rootCA.crt  rootCA.key  server.crt  server.csr  server.key  server.pfx
