[package]
name = "grpc-server-rust"
version = "3.0.7"
description = "gRPC Dialout Telemetry Collector - Rust rewrite"
edition = "2021"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[dependencies]
tonic = { version = "0.12", features = ["transport", "tls"] }
prost = "0.13"
prost-types = "0.13"
bytes = "1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
memmap2 = "0.9"
prost-reflect = "0.14"
chrono = "0.4"
tokio_stream = "1"

# ── Tauri (桌面 GUI 框架) ──────────────────────────────────────────
# 仅在 GUI 构建时启用；CLI 单独构建时不依赖 Tauri
tauri = { version = "2", features = [], optional = true }
tauri-build = { version = "2", features = [], optional = true }

[features]
default = []
gui = ["tauri", "tauri-build"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
